# gpucfr

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  cuda_base.h  doxygenconfig  efg_node.cu  efg_node.h  gpucfr.cu  gpucfr.h  gpucfr_correctness.bash  gpucfr_time_measure.bash  gs3.game  gs4.game  information_set.cu  information_set.h  main.cu  main2.cu  main3.cu  main_correctness.cu  output.game
include/: cuda_base.h  gpucfr.h
src/: cuda_base.cpp  gpucfr.cu  information_set.cu
